Fix test-itests-ddf-core tests